--- a/statusphere.html
+++ b/statusphere.html
@@ -13,7 +13,7 @@
 
 <template name="home">
 	<div class="container">
-			<h3>Predicted Temperature for today</h3>
-			<h2 class="temp">{{temp}}</h2>
+			<h3>Predicted temperature for today</h3>
+			<h2 class="temp">{{temp}}<sup>&#8457;</sup></h2>
 	</div>
 </template>
