Spark information + README update

--- a/statusphere.html
+++ b/statusphere.html
@@ -15,5 +15,6 @@
 	<div class="container">
 			<h3>Predicted temperature for today</h3>
 			<h2 class="temp">{{temp}}<sup>&#8457;</sup></h2>
+			<em>Forecasting data provided by <a href="http://openweathermap.org/" target="_blank">Open Weather Map</a></em>
 	</div>
 </template>
